# llm-bpm-bench

./: README.md  Taskfile.yml  docker-compose.yml
API/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
API/app/: main.py  worker_main.py
API/app/api/: benchmarks.py  cases.py  files.py  llm.py  llm_models.py  router.py  suites.py  system.py  websocket.py
API/app/core/: config.py  database.py  llm_clients.py  minio_client.py  utils.py
API/app/models/: base.py  benchmark_execution.py  benchmark_run.py  file_asset.py  llm_model.py  test_case.py  test_suite.py
API/app/schemas/: benchmark.py  file.py  llm_model.py  test_case.py  test_suite.py
API/app/services/: case_service.py  evaluation_service.py  llm_service.py  storage_service.py  suite_service.py
API/tests/: conftest.py  test_api.py
GUI/: index.html  package-lock.json  package.json
GUI/src/: App.vue
GUI/src/components/benchmarks/: BenchmarkModal.vue
GUI/src/components/files/: CollectionModal.vue  CollectionSidebar.vue  FileGrid.vue
GUI/src/components/models/: ModelModal.vue
GUI/src/components/suites/: SuiteModal.vue
GUI/src/router/: index.ts
GUI/src/services/: api.ts
GUI/src/views/: BenchmarkDetailView.vue  BenchmarksView.vue  FileManagerView.vue  ModelsView.vue  TestCasesView.vue  TestSuitesView.vue
