[project]
name = "llm-bpm-bench"
version = "0.1.0"
description = "LLM benchmark tool for business process management"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "minio>=7.2.20",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
